--- a/etc/tacker/api-paste.ini
+++ b/etc/tacker/api-paste.ini
@@ -29,5 +29,6 @@ paste.filter_factory = tacker.api.extensions:extension_middleware_factory
 [app:tackerversions]
 paste.app_factory = tacker.api.versions:Versions.factory
 
+#这个是用来托底的,负责回复404
 [app:tackerapiapp_v1_0]
 paste.app_factory = tacker.api.v1.router:APIRouter.factory
