--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ console_scripts =
     tacker-server = tacker.cmd.eventlet.tacker_server:main
     tacker-conductor = tacker.cmd.eventlet.conductor:main
     tacker-rootwrap = oslo.rootwrap.cmd:main
+#定义各服务插件
 tacker.service_plugins =
     dummy = tacker.tests.unit.dummy_plugin:DummyServicePlugin
     vnfm = tacker.vnfm.plugin:VNFMPlugin
