--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ tacker.service_plugins =
     vnfm = tacker.vnfm.plugin:VNFMPlugin
     nfvo = tacker.nfvo.nfvo_plugin:NfvoPlugin
     commonservices = tacker.plugins.common_services.common_services_plugin:CommonServicesPlugin
+#定义支持的vim驱动
 tacker.nfvo.vim.drivers =
     openstack = tacker.nfvo.drivers.vim.openstack_driver:OpenStack_Driver
     kubernetes = tacker.nfvo.drivers.vim.kubernetes_driver:Kubernetes_Driver
@@ -55,9 +56,11 @@ tacker.tacker.vnfm.drivers =
     noop = tacker.vnfm.infra_drivers.noop:DeviceNoop
     openstack = tacker.vnfm.infra_drivers.openstack.openstack:OpenStack
     kubernetes = tacker.vnfm.infra_drivers.kubernetes.kubernetes_driver:Kubernetes
+#定义网元配置驱动
 tacker.tacker.mgmt.drivers =
     noop = tacker.vnfm.mgmt_drivers.noop:DeviceMgmtNoop
     openwrt = tacker.vnfm.mgmt_drivers.openwrt.openwrt:DeviceMgmtOpenWRT
+#三种监控定义
 tacker.tacker.monitor.drivers =
     ping = tacker.vnfm.monitor_drivers.ping.ping:VNFMonitorPing
     http_ping = tacker.vnfm.monitor_drivers.http_ping.http_ping:VNFMonitorHTTPPing
@@ -65,6 +68,7 @@ tacker.tacker.app_monitor.drivers =
     zabbix = tacker.vnfm.monitor_drivers.zabbix.zabbix:VNFMonitorZabbix
 tacker.tacker.alarm_monitor.drivers =
     ceilometer = tacker.vnfm.monitor_drivers.ceilometer.ceilometer:VNFMonitorCeilometer
+#策略
 tacker.tacker.policy.actions =
     autoscaling = tacker.vnfm.policy_actions.autoscaling.autoscaling:VNFActionAutoscaling
     respawn = tacker.vnfm.policy_actions.respawn.respawn:VNFActionRespawn
